# jobsy

./: .gitignore  LICENSE  README.md  jobsy.py  pyproject.toml  tests.py
