[project]
name = "jobsy"
version = "0.1.0"
description = ""
authors = [
    {name = "renan_moretto@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
