[project]
name = "jobsy"
version = "0.1.4"
description = ""
authors = [
    {name = "renan_moretto@outlook.com"}
]
readme = "README.md"
repository = "https://github.com/renanmoretto/jobsy"
requires-python = ">=3.9"
dependencies = ["pytz (>=2025.2,<2026.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Repository = "https://github.com/renanmoretto/jobsy"